tests/ui/transparent/struct_no_fields.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/transparent/struct_no_fields.rs:4:1
  |
4 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/transparent/struct_no_fields.rs:5:24
  |
5 | struct TransparentUnit;
  |                        ^ consider adding a `main` function to `$DIR/tests/ui/transparent/struct_no_fields.rs`
