tests/ui/transparent/struct_no_fields.rs
use masterror::Error;

#[derive(Debug, Error)]
#[error(transparent)]
struct TransparentUnit;
